--- a/njf/index.html
+++ b/njf/index.html
@@ -67,9 +67,21 @@
 
 <footer>
 
-    <div class="col">
+    <div class="col" id="footer-left">
+        <div class="row"></div>
+        <div class="row">All Right Reserved.</div>
         <div class="row">&#169; 2018 Nicholas J. Fuentes</div>
     </div>
+
+    <div class="col" id="footer-center">
+        <div class="row">Made by Akoot</div>
+        <div class="col">Fix it yourself</div>
+        <div class="col"><a href="https://github.com/Akoot/akoot.github.io/tree/master/njf"><i class="fab fa-github"></i> Github</a></div>
+    </div>
+
+    <!-- <div class="col" id="#footer-right">
+        <div class="row"><a href="s"><i class="fas fa-rss"></i> RSS Feed </a></div>
+    </div> -->
 
 </footer>
 
