--- a/njf/index.html
+++ b/njf/index.html
@@ -79,9 +79,9 @@
         <div class="col"><a href="https://github.com/Akoot/akoot.github.io/tree/master/njf"><i class="fab fa-github"></i> Github</a></div>
     </div>
 
-    <!-- <div class="col" id="#footer-right">
-        <div class="row"><a href="s"><i class="fas fa-rss"></i> RSS Feed </a></div>
-    </div> -->
+    <div class="col" id="#footer-right">
+        <div class="row"><a href="feed.xml"><i class="fas fa-rss"></i> RSS Feed</a></div>
+    </div>
 
 </footer>
 
