Fixed major typo in footer

--- a/njf/index.html
+++ b/njf/index.html
@@ -80,7 +80,7 @@
     </div>
 
     <div class="col" id="#footer-right">
-        <div class="row"><a href="feed.xml"><i class="fas fa-rss"></i> RSS Feed</a></div>
+        <div class="row"><a href="feed.xml"><i class="fas fa-rss"></i> RSS Feed?</a></div>
     </div>
 
 </footer>
