Epic footer fix

--- a/njf/index.html
+++ b/njf/index.html
@@ -70,7 +70,7 @@
     <div class="col" id="footer-left">
         <div class="row"></div>
         <div class="row">All Right Reserved.</div>
-        <div class="row">&#169; 2018 Nicholas J. Fuentes</div>
+        <div class="row">&#169; 2018 <a href="https://nicholasjfuentes.com">Nicholas J. Fuentes</a></div>
     </div>
 
     <div class="col" id="footer-center">
@@ -80,7 +80,7 @@
     </div>
 
     <div class="col" id="#footer-right">
-        <div class="row"><a href="feed.xml"><i class="fas fa-rss"></i> RSS Feed?</a></div>
+        <div class="row"><a href="feed.xml"><i class="fas fa-rss"></i> RSS Feed? idk</a></div>
     </div>
 
 </footer>
