Removed footer on mobile, added rewind and forward buttons

--- a/njf/index.html
+++ b/njf/index.html
@@ -46,6 +46,11 @@
             <div id="buttons">
                 <div id="download-button" class="clickable"><i class="fas fa-arrow-alt-circle-down"></i> Download</div>
                 <div id="youtube-button" class="clickable"><i class="fab fa-youtube"></i> Video</div>
+                <div id="rewind-button" class="clickable"><i class="fas fa-backward"></i></div>
+                <label id="time-area">
+                    <input id="time-text" class="clickable" type="text" placeholder="Seconds" value="10">
+                </label>
+                <div id="forward-button" class="clickable"><i class="fas fa-forward"></i></div>
             </div>
         </div>
 
