Added episode 302, Removed RSS feed from 2001, Cleaned up footer, Added Importer.jar for ez episode syncing, Added .gitignore also

--- a/njf/index.html
+++ b/njf/index.html
@@ -74,18 +74,13 @@
 
     <div class="col" id="footer-left">
         <div class="row"></div>
-        <div class="row">All Right Reserved.</div>
         <div class="row">&#169; 2018 <a href="https://nicholasjfuentes.com">Nicholas J. Fuentes</a></div>
+        <div class="row">All Right Reserved.</div>
     </div>
 
     <div class="col" id="footer-center">
-        <div class="row">Made by Akoot</div>
-        <div class="col">Fix it yourself</div>
-        <div class="col"><a href="https://github.com/Akoot/akoot.github.io/tree/master/njf"><i class="fab fa-github"></i> Github</a></div>
-    </div>
-
-    <div class="col" id="#footer-right">
-        <div class="row"><a href="feed.xml"><i class="fas fa-rss"></i> RSS Feed? idk</a></div>
+        <div class="row">Made by <a href="https://github.com/akoot">Akoot</a></div>
+        <div class="row">Hosted on <a href="https://github.com/Akoot/akoot.github.io/tree/master/njf"><i class="fab fa-github"></i> Github</a></div>
     </div>
 
 </footer>
