RSS is back babey!

--- a/njf/index.html
+++ b/njf/index.html
@@ -98,6 +98,11 @@
         <div class="row">Hosted on <a href="https://github.com/Akoot/akoot.github.io/tree/master/njf"><i class="fab fa-github"></i> Github</a></div>
     </div>
 
+    <div class="col" id="#footer-right">
+        <div class="row"><a href="https://github.com/Akoot/akoot.github.io/commits/master/njf/episodes.json.atom"><i
+                class="fas fa-rss"></i> RSS Feed</a></div>
+    </div>
+
 </footer>
 
 <script src="js/main.js"></script>
