Created the main site and stuff etc etc no big deal Okay, this is epic

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Akoot's COOL Website dot com</title>
+
+    <!--Bootstrap-->
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
           integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" rel="stylesheet">
     <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -11,10 +13,142 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
     <script crossorigin="anonymous" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
             src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+
+    <!--FontAwesome-->
+    <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+          integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" rel="stylesheet">
+
+    <!--Custom Styles-->
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-Please visit my new site over at at <a href="http://smokingjew.com">https://ww3.smokingjew.com</a> thank's :)
-<hr>
-<a href="njf/index.html">America First Audio</a>
+
+<div class="container unselectable" id="header">
+
+    <!--Logo-->
+    <div class="logo">
+        <div class="text-center">
+            <div class="mx-auto" id="logo"></div>
+            <h3 id="name">Akoot</h3>
+        </div>
+    </div>
+
+    <!--Nav-->
+    <ul class="nav justify-content-center">
+
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Home</a>
+        </li>
+
+        <li class="nav-item dropdown">
+            <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-toggle="dropdown"
+               href="#"
+               role="button">Projects</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="njf/index.html">NJF Audio</a>
+            </div>
+        </li>
+
+        <li class="nav-item dropdown">
+            <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-toggle="dropdown"
+               href="#"
+               role="button">Arcive</a>
+            <div class="dropdown-menu">
+                <h6 class="dropdown-header">Game Prototypes</h6>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="archive/games/index.html#wat">Wat</a>
+                <a class="dropdown-item" href="archive/games/index.html#teh-crab">Teh Crab</a>
+                <a class="dropdown-item" href="archive/games/index.html#misc">Misc</a>
+            </div>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link disabled" href="games.html">Games</a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="mailto:akoot311@gmail.com">Contact</a>
+        </li>
+
+    </ul>
+
+</div>
+
+<div class="container my-5">
+    <h1 class="section">Music</h1>
+    <blockquote>A compilation of my finest tracks over the years across multiple accounts.</blockquote>
+    <div class="row">
+        <iframe allow="autoplay" frameborder="no" height="450" scrolling="no"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/695551935%3Fsecret_token%3Ds-BWvyK&color=%2390bdc0&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"
+                width="100%"></iframe>
+    </div>
+</div>
+
+<div class="container my-5">
+    <h1 class="section">416</h1>
+    <blockquote>Branding</blockquote>
+    <div class="row my-4">
+        <div class="col">
+            <img alt="" class="img-thumbnail" src="img/416/416-design1-purple.png">
+        </div>
+        <div class="col">
+            <img alt="" class="img-thumbnail" src="img/416/416-design1-blue.png">
+        </div>
+        <div class="col">
+            <img alt="" class="img-thumbnail" src="img/416/416-design1-green.png">
+        </div>
+    </div>
+    <div class="row my-4">
+        <div class="col">
+            <img alt="" class="img-thumbnail" src="img/416/416-design1-yellow.png">
+        </div>
+        <div class="col">
+            <img alt="" class="img-thumbnail" src="img/416/416-design1-orange.png">
+        </div>
+        <div class="col">
+            <img alt="" class="img-thumbnail" src="img/416/416-design1-red.png">
+        </div>
+    </div>
+</div>
+
+<footer>
+
+    <div class="container text-center unselectable" id="footer">
+
+        <div class="row">
+
+            <a href="https://twitter.com/Akoot_">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://www.youtube.com/channel/UCWnPov5QFMmB8VDI8ySYoSA">
+                <i class="fab fa-youtube"></i>
+            </a>
+            <a href="https://soundcloud.com/federalagent">
+                <i class="fab fa-soundcloud"></i>
+            </a>
+            <a href="https://twitch.tv/akoot311">
+                <i class="fab fa-twitch"></i>
+            </a>
+            <a href="https://steamcommunity.com/id/elemayostudios">
+                <i class="fab fa-steam"></i>
+            </a>
+            <a href="https://github.com/akoot">
+                <i class="fab fa-github"></i>
+            </a>
+
+        </div>
+
+        <div class="row">
+            Copyright &copy; 2019
+            <a href="#">416</a>
+        </div>
+
+    </div>
+
+</footer>
+
+<!--What are scripts?-->
+<script src="js/main.js" type="text/javascript"></script>
+
 </body>
 </html>
