Added embed to swf files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Akoot's COOL Website dot com</title>
+    <title>Akoot dot com</title>
+
+    <!--Icon-->
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="favicon.ico" rel="icon" type="image/x-icon">
 
     <!--Bootstrap-->
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -54,16 +58,12 @@
                href="#"
                role="button">Arcive</a>
             <div class="dropdown-menu">
-                <h6 class="dropdown-header">Game Prototypes</h6>
+                <h6 class="dropdown-header"><a href="archive/games/index.html">Game Prototypes</a></h6>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="archive/games/index.html#wat">Wat</a>
                 <a class="dropdown-item" href="archive/games/index.html#teh-crab">Teh Crab</a>
                 <a class="dropdown-item" href="archive/games/index.html#misc">Misc</a>
             </div>
-        </li>
-
-        <li class="nav-item">
-            <a class="nav-link disabled" href="games.html">Games</a>
         </li>
 
         <li class="nav-item">
@@ -74,9 +74,10 @@
 
 </div>
 
-<div class="container my-5">
+<div id="main">
+    <div class="container py-5">
     <h1 class="section">Music</h1>
-    <blockquote>A compilation of my finest tracks over the years across multiple accounts.</blockquote>
+        <blockquote>A compilation of my "finest" tracks over the years across multiple accounts</blockquote>
     <div class="row">
         <iframe allow="autoplay" frameborder="no" height="450" scrolling="no"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/695551935%3Fsecret_token%3Ds-BWvyK&color=%2390bdc0&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"
@@ -84,31 +85,11 @@
     </div>
 </div>
 
-<div class="container my-5">
-    <h1 class="section">416</h1>
-    <blockquote>Branding</blockquote>
-    <div class="row my-4">
-        <div class="col">
-            <img alt="" class="img-thumbnail" src="img/416/416-design1-purple.png">
-        </div>
-        <div class="col">
-            <img alt="" class="img-thumbnail" src="img/416/416-design1-blue.png">
-        </div>
-        <div class="col">
-            <img alt="" class="img-thumbnail" src="img/416/416-design1-green.png">
-        </div>
-    </div>
-    <div class="row my-4">
-        <div class="col">
-            <img alt="" class="img-thumbnail" src="img/416/416-design1-yellow.png">
-        </div>
-        <div class="col">
-            <img alt="" class="img-thumbnail" src="img/416/416-design1-orange.png">
-        </div>
-        <div class="col">
-            <img alt="" class="img-thumbnail" src="img/416/416-design1-red.png">
-        </div>
-    </div>
+    <div class="container py-5">
+        <h1 class="section">Game Progress</h1>
+        <blockquote>Coming Soon...</blockquote>
+</div>
+
 </div>
 
 <footer>
