--- a/njf/index.html
+++ b/njf/index.html
@@ -94,7 +94,7 @@
     </div>
 
     <div class="col" id="footer-center">
-        <div class="row">Made by <a href="https://github.com/akoot">Akoot</a></div>
+        <div class="row">Made by <a href="https://akoot.github.io">Akoot</a></div>
         <div class="row">Hosted on <a href="https://github.com/Akoot/akoot.github.io/tree/master/njf"><i class="fab fa-github"></i> Github</a></div>
     </div>
 
