--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>RETARD</title>
+    <title>F</title>
 </head>
 <body>
-404 - <a href="index.html">Home</a>
+404 - <a href="akoot.github.io">Home</a>
 </body>
 </html>
