--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <li class="nav-item dropdown">
             <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-toggle="dropdown"
                href="#"
-               role="button">Arcive</a>
+               role="button">Archive</a>
             <div class="dropdown-menu">
                 <h6 class="dropdown-header"><a href="archive/games/index.html">Game Prototypes</a></h6>
                 <div class="dropdown-divider"></div>
